...

                if (username.isEmpty) {
                  return;
                }

                if (!username.startsWith('@')) {
                  username = '@$username';
                }

                if (!creators.contains(username)) {
                  setState(() {
                    creators.add(username);
                  });
...
